<resources>
    <string name="app_name">Groceries</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="grocery_info">Item Info</string>
    <string name="title_activity_grocery">GroceryActivity</string>
    <string name="grocery_name">Name:</string>
    <string name="grocery_quantity">Qty:</string>
    <string name="grocery_unit">Unit:</string>
    <string name="hint_name">Item Name</string>
    <string name="hint_qty">Qty?</string>
    <string name="hint_notes">Write your notes!</string>
    <string name="grocery_notes">Notes:</string>
    <string name="done_checkBox">Are you done with this Item?</string>
    <string name="delete">Delete</string>
    <string name="clean_name_toast">The item needs a name</string>
    <string name="save">save</string>
    <string name="explore">Explore</string>
    <string name="list">My List</string>
    <string name="title_activity_parse_item_view">ParseItemView</string>
    <string name="add_button">Add Item to My List</string>
    <string name="empty_list">You have no Items. Create a new one</string>
    <string name="create_button">Create Item</string>
    <string name="dialog_text">Are you sure you want to share this item?</string>
    <string name="dialog_title">Share this Item</string>
</resources>
